kubernetes/apps/networking/envoy-gateway/pitower/direct.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-direct
  labels:
    external-dns.alpha.kubernetes.io/enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname ip.pitower.link
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: "192.168.0.237"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: pitower-link-production-tls
    - name: udp-40000
      protocol: UDP
      port: 40000
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40001
      protocol: UDP
      port: 40001
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40002
      protocol: UDP
      port: 40002
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40003
      protocol: UDP
      port: 40003
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40004
      protocol: UDP
      port: 40004
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40005
      protocol: UDP
      port: 40005
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40006
      protocol: UDP
      port: 40006
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40007
      protocol: UDP
      port: 40007
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40008
      protocol: UDP
      port: 40008
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40009
      protocol: UDP
      port: 40009
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40010
      protocol: UDP
      port: 40010
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40011
      protocol: UDP
      port: 40011
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40012
      protocol: UDP
      port: 40012
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40013
      protocol: UDP
      port: 40013
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40014
      protocol: UDP
      port: 40014
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40015
      protocol: UDP
      port: 40015
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40016
      protocol: UDP
      port: 40016
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40017
      protocol: UDP
      port: 40017
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40018
      protocol: UDP
      port: 40018
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40019
      protocol: UDP
      port: 40019
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-40020
      protocol: UDP
      port: 40020
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-direct
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-direct
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
